<resources>
    <string name="app_name">Kennel Club</string>
    <string name="Welcome">Добро пожаловать в Кинологический клуб!</string>
    <string name="Reg">Регистрация</string>
    <string name="Enter">Вход</string>
    <string name="Num">Ваш номер телефона</string>
    <string name="Pass">Не менее 8 символов</string>
    <string name="Name">Не менее 2 символов</string>
    <string name="Reg2">Зарегистрироваться</string>
    <string name="title_activity_news_test">Новости</string>
    <string name="large_text">
        \t\t\t\tГуляем без поводка.\n\n\n

        В вопросе прогулок с собаками мы все находимся между двух огней. Первый высвечивает тезис:
        «Все псы должны быть на поводках», а второй — антитезис: «Собака должна иметь возможность бегать
        свободно хоть иногда». В какую сторону следовать, конечно, каждый решает сам. Хотя его иногда подгоняют соседи,
        грозящие участковым из-за бесповодочной собаки на выгуле. А иногда чувство вины — собака же не должна всю жизнь
        жить на привязи. Якобы. Я не люблю чувство вины, особенно навязанное. Поэтому буду говорить сегодня про поводок
        и его отсутствие на прогулках.\n\n\

Сразу оговорюсь, что вопросы законодательства о выгуле собак затрагивать не стану. Оно везде разное,
        и даже в пределах одной страны может отличаться от региона к региону. Ну и не юристка я, чтобы об
        этом говорить. А вот в поведении собак немного разбираюсь, оттуда и буду плясать. И сразу дисклеймер: две
        из трех моих собак гуляют без поводков, потому что так безопаснее и удобнее мне. Оставшаяся гуляет на
        поводке 90% времени. И это опять обусловлено безопасностью и моим удобством. На самом деле безопасность и
        удобство — главное, на что стоит ориентироваться в жизни с собакой. Прогулки с поводком или без не исключение.
        И еще одно уточнение. Когда я говорю про прогулки на поводке, я имею в виду поводок длиной от 7 до 15 метров.
        Короткие «водилки» в 1-3 м лучше использовать не для прогулок, а чтобы дойти куда-то по делам, потому что они не
        позволяют нормально разгуляться.\n\n

Начну с предназначения поводка. Как ни странно, он нужен не для того, чтобы «водить» собаку. В идеале это просто
        страховка. Как ремень безопасности в автомобиле, который не несет никакой функциональной нагрузки до тех пор,
        пока не случится резкое торможение. А когда случится, ремень удержит вас, чтобы вы не вылетели в лобовое стекло.
        Если вылетать вы не собираетесь, а просто мирно сидите за рулем, ремень безопасности так же мирно лежит у вас на
        груди и не побуждает ни к каким действиям: не тянет в сторону, когда нужно повернуть, и не прижимает к спинке
        кресла, когда нужно остановиться.\n\n

    Совершенно согласна про обоюдный комфорт в этом вопросе. мы гуляем без поводка в
        безопасных местах - лес, речка, двор, парк, поле (где нет машин и не очень много людей).
        Единственное, с чем не научились справляться - это патологическая страсть моей собаки к вываливанию
        во всякой вонючей тухлятине типа дохлой крысы. А вот где есть машины, толпы детей, тому подобные факторы риска,
        там всегда на поводке. Потому что собака моя воспитанная, а вот насчет людей вокруг я не уверена.
        Он 100% не укусит, но зачем доставлять и ему, и мне лишний дискомфорт? Собака ведет себя прекрасно, знает,
        что и на поводке, и без, у него приоритетное право выбора направления, по делам мы ходим в конце прогулки и он
        все места знает, сам туда ведет. Хотя у меня собака "поводковой породы"
    </string>
    <string name="action_settings">Settings</string>
</resources>