<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0f0c0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="246dp"
        android:layout_height="264dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="320dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="#d0f0c0"
        android:text="@string/Welcome"
        android:textColor="#8BC34A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Register"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/Reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/contacts"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#1A8C39"
        android:text="выбрать питомца"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Button
        android:id="@+id/find"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#1A8C39"
        android:text="всё о дрессировке!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Button
        android:id="@+id/Chat"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="#1A8C39"
        android:text="чат для поиска "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Button
        android:id="@+id/News"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:layout_marginTop="228dp"
        android:backgroundTint="#1A8C39"
        android:text="Новости"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

</androidx.constraintlayout.widget.ConstraintLayout>